[gd_scene load_steps=14 format=3 uid="uid://cmpn4xyxj12ug"]

[ext_resource type="Texture2D" uid="uid://blh5ydyrniq5v" path="res://Assets/side menu open.png" id="1_8emtu"]
[ext_resource type="Script" path="res://Scripts/SideMenu.gd" id="1_qflrv"]
[ext_resource type="Texture2D" uid="uid://bq10lkekcjgj0" path="res://Assets/part_arms.png" id="2_1wsdn"]
[ext_resource type="Texture2D" uid="uid://camft3576itvw" path="res://Assets/part_legs.png" id="3_gc476"]
[ext_resource type="Texture2D" uid="uid://dm8bmlirjhqd0" path="res://Assets/part_body.png" id="4_x53n2"]
[ext_resource type="Texture2D" uid="uid://c1fxf863bdhiw" path="res://Assets/part_head.png" id="5_dihkr"]
[ext_resource type="Texture2D" uid="uid://cgs8uf0omomq" path="res://Assets/inverntory_hackaton_cube.png" id="7_6ijeu"]

[sub_resource type="Animation" id="Animation_0oswp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8lx5g"]
resource_name = "SideMenuHide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(-605, 0)]
}

[sub_resource type="Animation" id="Animation_d6ddt"]
resource_name = "SideMenuShow"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(-605, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ouuba"]
_data = {
"RESET": SubResource("Animation_0oswp"),
"SideMenuHide": SubResource("Animation_8lx5g"),
"SideMenuShow": SubResource("Animation_d6ddt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de3fc"]
size = Vector2(85, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_je8aa"]
size = Vector2(103, 104)

[node name="SideMenu" type="Node2D"]
z_index = 10
script = ExtResource("1_qflrv")

[node name="SideMenuOpen" type="Sprite2D" parent="."]
position = Vector2(328.5, 463.5)
texture = ExtResource("1_8emtu")

[node name="PartArms" type="Sprite2D" parent="."]
position = Vector2(199, 461)
texture = ExtResource("2_1wsdn")

[node name="PartLegs" type="Sprite2D" parent="."]
position = Vector2(199, 461)
texture = ExtResource("3_gc476")

[node name="PartBody" type="Sprite2D" parent="."]
position = Vector2(199, 461)
texture = ExtResource("4_x53n2")

[node name="PartHead" type="Sprite2D" parent="."]
position = Vector2(199, 461)
texture = ExtResource("5_dihkr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ouuba")
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(600, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32.5, 65)
shape = SubResource("RectangleShape2D_de3fc")

[node name="InverntoryHackatonCube" type="Sprite2D" parent="."]
position = Vector2(484, 131)
texture = ExtResource("7_6ijeu")

[node name="Area2D" type="Area2D" parent="InverntoryHackatonCube"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InverntoryHackatonCube/Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_je8aa")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="InverntoryHackatonCube/Area2D" to="." method="_onbiteHackClick"]
